# tetris

./: CMakeLists.txt
src/: main.c  main.h
